fix links not wrapping in 3rd level nav
git-svn-id: https://svn.library.cornell.edu/cul7theme/trunk@579 29d2e8ee-217f-479a-8a37-9775d62f972e

--- a/css/cul/_navs.scss
+++ b/css/cul/_navs.scss
@@ -147,6 +147,9 @@
 	}
 }
 
+// override bootstrap dropdown link wrapping
+.dropdown-menu > li > a { white-space: wrap; }
+
 
 // Override Bootstrap's unclickable parent link
 // https://drupal.org/comment/7228804#comment-7228804
